# quicknote-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml  requiremens-dev.txt  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
src/pynote/: __main__.py  cli.py
